# Stark-OS

./: .gitignore  Cargo.toml  Makefile  run.sh
.cargo/: config.toml
build_scripts/: config.mk  generate_isrs.h  make_disk_image.sh  toolchain.mk
src/: lib.rs  main.rs
src/bootloader/: Makefile  boot_info.h  bootloader.c
src/bootloader/stage1/: Makefile  boot.asm  linker.ld
src/bootloader/stage2/: Makefile  entry.asm  fat.c  linker.ld  memdefs.h  memory.c  stdio.c  stdio.h  x86.asm  x86.h
src/graphics/: vga_driver.rs
src/interrupts/: gdt.rs  idt.rs
src/kernel/: Makefile  debug.c  main.c  stdio.c  stdio.h
src/kernel/arch/i686/: e9.c  gdt.asm  gdt.c  i8259.c  idt.asm  idt.c  idt.h  io.asm  io.c  io.h  irq.c  isr.asm  isr.c  isrs_gen.c  pic.c  pic.h
src/kernel/hal/: hal.c  vfs.c  vfs.h
src/kernel/util/: binary.h
src/memory/: mem.rs
testing_booting_into_protected_mode/: Makefile  bochs_config  floppy.img  main.lst
testing_booting_into_protected_mode/src/: main.asm
