[package]
name = "stark-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "stark-os"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

